# DXR-Fallback-Layer

./: .gitignore  CMakeLists.txt
Include/: D3D12RaytracingFallback.h
src/: fallbacklayerunittests.cpp  pch.h
src/CompiledShaders/: BottomLevelLoadTriangles.h  CalculateMortonCodesForTriangles.h  CalculateSceneAABBFromTriangles.h  ClearBuffer.h  DynamicIndexTest.h  LoadTrianglesFromR16IndexBuffer.h  LoadTrianglesNoIndexBuffer.h  MinimalTraverseShaderLib.h  NullTraverseLib.h  OpaqueTraverseShaderLib.h  ReadDataBuffer.h  ReadDataRWBuffer.h  ReadDataRWByteAddressBuffer.h  ReadDataRWTexture1D.h  ReadDataRWTexture1DArray.h  ReadDataRWTexture2D.h  ReadDataRWTexture2DArray.h  ReadDataRWTexture3D.h  ReadDataTexture1D.h  ReadDataTexture1DArray.h  ReadDataTexture2D.h  ReadDataTexture2DArray.h  ReadRootConstants.h  SimpleCompute.h  SimpleRayTracing.h  SimpleRaygen.h  TraverseShaderLib.h
